--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,26 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!--		swagger-->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
+		<!--		jackson-->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.15.2</version> <!-- Asegúrate de que coincida con la versión de jackson-databind -->
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate5</artifactId>
+			<version>2.15.4</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
