--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,16 @@
 			<version>2.15.4</version>
 		</dependency>
 
+		<!--	Security	-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
