--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,20 +6,21 @@ spring:
     username: root
     password: Francisco31.
     driver-class-name: org.mariadb.jdbc.Driver
-  security:
-    user:
-      name: admin
-      password: admin123
-  servlet:
-    multipart:
-      max-file-size: 5MB
-      max-request-size: 5MB
   jpa:
     show-sql: false
     hibernate:
       naming:
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MariaDBDialect
+        format_sql: true
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
 server:
   port: 8080
 app:
