--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,18 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- PDF -->
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.xhtmlrenderer</groupId>
+			<artifactId>flying-saucer-pdf</artifactId>
+			<version>9.1.22</version>
+		</dependency>
+
 
 	</dependencies>
 
